crates/analyzer/tests/snapshots/errors__call_duplicate_def.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `fn __call__()` is defined multiple times in `contract Foo`
   ┌─ compile_errors/call_duplicate_def.fe:2:5
   │      
 2 │ ╭         pub fn __call__():
 3 │ │             pass
   │ ╰────────────────^ `__call__` first defined here
   · │    
 8 │   ╭       pub fn __call__():
 9 │   │           1 + 2
   │   ╰───────────────' `__call__` redefined here
10 │       
11 │     ╭     pub fn __call__():
12 │     │         3 + 4
   │     ╰─────────────' `__call__` redefined here


