crates/analyzer/tests/snapshots/errors__call_keccak_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `bool` can not be used as a parameter to `keccak(..)`
  ┌─ compile_errors/call_keccak_with_wrong_type.fe:7:17
  │
7 │        keccak256(true)
  │                 ^^^^^^ wrong type
  │
  = Note: keccak(..) expects a byte array as parameter


