crates/analyzer/tests/snapshots/errors__call_non_pub_fn_on_external_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: The function `do_private_thingz` on `contract Foo` is private
   ┌─ compile_errors/call_non_pub_fn_on_external_contract.fe:10:26
   │  
 5 │ ╭   fn do_private_thingz(self):
 6 │ │      self.val = 100
   │ ╰───────────────────' `do_private_thingz` is defined here
   · │
10 │       Foo(ctx, address(0)).do_private_thingz()
   │                            ^^^^^^^^^^^^^^^^^ this function is not `pub`


